--- a/assets/html/frontend/partials/sidebar.html
+++ b/assets/html/frontend/partials/sidebar.html
@@ -7,7 +7,7 @@
             <div class="guide-item-container personal-item">
               <ul class="guide-user-links yt-uix-tdl yt-box">
                 <li class="vve-check guide-channel overflowable-list-item">
-                  <a class="guide-item yt-uix-sessionlink yt-valign spf-link" href="{{MAIN_URL}}/home" title="What to Watch">
+                  <a class="guide-item yt-uix-sessionlink yt-valign spf-link" href="{{MAIN_URL}}" title="What to Watch">
                     <span class="yt-valign-container">
                       <img src="/assets/images/pixel-vfl3z5WfW.gif" class="thumb guide-what-to-watch-icon" alt="">
                       <span class="display-name no-count"><span>What to Watch</span></span>
@@ -73,6 +73,7 @@
             </div>
             <hr class="guide-section-separator">
           </li>
+          {{SIDEBAR_TECH_SECTION}}
         </ul>
       </div>
     </div>
