--- a/assets/embed/styles.css
+++ b/assets/embed/styles.css
@@ -204,6 +204,17 @@ video {
   width: 34px;
 }
 
+.video-container .loading-icon {
+  display: none;
+}
+.video-container.loading .loading-icon {
+  display: block;
+}
+.video-container.loading .play-icon,
+.video-container.loading .pause-icon {
+  display: none !important;
+}
+
 .video-container.paused .pause-icon {
   display: none;
 }
@@ -305,7 +316,8 @@ html.ie-fullscreen body .video-container .open {
 }
 
 .video-container .settings-speed,
-.video-container .settings-quality {
+.video-container .settings-quality,
+.video-container .settings-codec {
   float: right;
   width: 110px;
   height: 26px;
@@ -318,7 +330,8 @@ html.ie-fullscreen body .video-container .open {
   cursor: pointer;
 }
 .video-container .settings-speed option,
-.video-container .settings-quality option {
+.video-container .settings-quality option,
+.video-container .settings-codec option {
   background: #2a2a2a;
   color: #ddd;
 }
